fix(style): remove no-wrap on header
- was causing some weirdness on hub page's layout

--- a/public/_assets/css/style.css
+++ b/public/_assets/css/style.css
@@ -413,7 +413,6 @@ summary {
   .header__splash::before, .header__splash::after {
     margin: 0 var(--spacing-200);
     content: "⸙͎۪۫｡˚۰˚☽˚⁀➷｡˚⸙͎۪۫⋆";
-    text-wrap: nowrap;
   }
 }
 
