--- a/public/_assets/scss/layouts/_header.scss
+++ b/public/_assets/scss/layouts/_header.scss
@@ -27,7 +27,6 @@
             &::after {
                 margin: 0 var(--spacing-200);
                 content: "⸙͎۪۫｡˚۰˚☽˚⁀➷｡˚⸙͎۪۫⋆";
-                text-wrap: nowrap;
             }
         }
     }
